--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css"
       type="text/css"/>
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      type="text/css"/>
     <title>React App</title>
   </head>
   <body>
