--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css"
-      type="text/css"/>
-    <link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      type="text/css"/>
-    <title>React App</title>
+    <title>Dash McDasherdash</title>
   </head>
   <body>
     <noscript>
